--- a/sandbox.client/front/ts/app/client/client-list-component.css
+++ b/sandbox.client/front/ts/app/client/client-list-component.css
@@ -2,6 +2,16 @@ body {
   padding-top: 90px;
 }
 
+.filter-input-group {
+  width: 100%;
+}
+
+#input-filter {
+  -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
 .center-all {
   vertical-align: middle;
   text-align: center;
